--- a/lesson1_serial_helloworld/sample_code/MDK-ARM/test/test.build_log.htm
+++ b/lesson1_serial_helloworld/sample_code/MDK-ARM/test/test.build_log.htm
@@ -22,11 +22,34 @@ Dialog DLL:      TARMCM1.DLL V1.9.0.0
  
 <h2>Project:</h2>
 C:\Users\Allen\Desktop\stm32_the_easy_way\lesson1_serial_helloworld\sample_code\MDK-ARM\test.uvprojx
-Project File Date:  02/06/2018
+Project File Date:  02/07/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'test'
+assembling startup_stm32f030x6.s...
+compiling stm32f0xx_hal_tim_ex.c...
+compiling stm32f0xx_hal_tim.c...
+compiling stm32f0xx_hal_i2c_ex.c...
+compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_i2c.c...
+compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_rcc_ex.c...
+compiling stm32f0xx_hal_rcc.c...
+compiling stm32f0xx_hal_flash_ex.c...
+compiling stm32f0xx_hal_dma.c...
+compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal_gpio.c...
+compiling stm32f0xx_hal.c...
+compiling stm32f0xx_hal_uart.c...
+compiling stm32f0xx_hal_uart_ex.c...
+compiling stm32f0xx_hal_flash.c...
+compiling system_stm32f0xx.c...
+compiling main.c...
+compiling stm32f0xx_it.c...
+compiling stm32f0xx_hal_msp.c...
+linking...
+Program Size: Code=3868 RO-data=232 RW-data=12 ZI-data=1140  
 "test\test.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -45,7 +68,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
