lesson 3 finishing touches

--- a/lesson3_serial_recv_interrupt/sample_code_linear_buf/MDK-ARM/test/test.build_log.htm
+++ b/lesson3_serial_recv_interrupt/sample_code_linear_buf/MDK-ARM/test/test.build_log.htm
@@ -26,15 +26,32 @@ Project File Date:  05/29/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 1 (build 61)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Build target 'test'
+Rebuild target 'test'
+assembling startup_stm32f030x6.s...
+compiling stm32f0xx_hal_tim_ex.c...
+compiling stm32f0xx_hal_tim.c...
+compiling stm32f0xx_hal_i2c_ex.c...
+compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_i2c.c...
+compiling stm32f0xx_hal_rcc_ex.c...
+compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_rcc.c...
+compiling stm32f0xx_hal_dma.c...
+compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal_flash_ex.c...
+compiling stm32f0xx_hal.c...
+compiling stm32f0xx_hal_gpio.c...
+compiling stm32f0xx_hal_uart_ex.c...
+compiling stm32f0xx_hal_flash.c...
+compiling stm32f0xx_hal_uart.c...
 compiling main.c...
+compiling stm32f0xx_it.c...
+compiling stm32f0xx_hal_msp.c...
 compiling linear_buf.c...
-..\Src\linear_buf.c(6): warning:  #174-D: expression has no effect
-  huart1;
-..\Src\linear_buf.c: 1 warning, 0 errors
+compiling system_stm32f0xx.c...
 linking...
-Program Size: Code=5076 RO-data=232 RW-data=16 ZI-data=1400  
-"test\test.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=5048 RO-data=232 RW-data=16 ZI-data=1400  
+"test\test.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -52,7 +69,7 @@ Package Vendor: ARM
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:4.3.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
